--- a/.env.local
+++ b/.env.local
@@ -4,3 +4,4 @@ NEXTAUTH_URL=http://localhost:3000
 NEXTAUTH_SECRET=your-secret-key
 GOOGLE_CLIENT_ID=your-google-client-id
 GOOGLE_CLIENT_SECRET=your-google-client-secret
+NEXT_PUBLIC_REVERSE_GEOCODE_API=/api/reverse
