--- a/.env.local
+++ b/.env.local
@@ -5,3 +5,5 @@ NEXTAUTH_SECRET=your-secret-key
 GOOGLE_CLIENT_ID=your-google-client-id
 GOOGLE_CLIENT_SECRET=your-google-client-secret
 NEXT_PUBLIC_REVERSE_GEOCODE_API=/api/reverse
+MONGODB_URI=mongodb+srv://subeerk491_db_user:eEzHDOhwdCYAUmjA@cluster1.p9doqoe.mongodb.net/?retryWrites=true&w=majority
+MONGODB_DB=subeerk491_db
