--- a/.env.local
+++ b/.env.local
@@ -1,9 +1,9 @@
 NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME=dehccrol4
 NEXT_PUBLIC_UPLOAD_PRESET=Images
 NEXTAUTH_URL=http://localhost:3000
-NEXTAUTH_SECRET=your-secret-key
+NEXTAUTH_SECRET="+SfOJTU3uqLUJaM9rhVRlqoetO3COlAQP9lL8nroGt8=" # Added by `npx auth`. Read more: https://cli.authjs.dev
 GOOGLE_CLIENT_ID=your-google-client-id
 GOOGLE_CLIENT_SECRET=your-google-client-secret
 NEXT_PUBLIC_REVERSE_GEOCODE_API=/api/reverse
-MONGODB_URI=mongodb+srv://subeerk491_db_user:eEzHDOhwdCYAUmjA@cluster1.p9doqoe.mongodb.net/?retryWrites=true&w=majority
 MONGODB_DB=subeerk491_db
+DATABASE_URL=mongodb+srv://subeerk491_db_user:eEzHDOhwdCYAUmjA@cluster1.p9doqoe.mongodb.net/RushNow?retryWrites=true&w=majority
