--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^5.22.0",
     "bcryptjs": "^3.0.3",
     "cloudinary": "^2.8.0",
     "mongodb": "^7.0.0",
@@ -17,6 +18,7 @@
     "next": "^14.2.0",
     "next-auth": "^4.24.13",
     "next-connect": "^1.0.0",
+    "prisma": "^5.22.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
